--- a/index.HTML
+++ b/index.HTML
@@ -53,7 +53,11 @@
 
 
 
-
+    <script src="createArticle.js"></script>   
+    <script src="createImage.js"></script>
+    <script src="createFullName.js"></script>
+    <script src="createIkons.js"></script>
+    <script src="createClickInArray.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
